feat: add CSV import for ClubDesk exports #1
Signed-off-by: Marcus Fihlon <marcus@fihlon.swiss>

--- a/src/main/resources/vaadin-i18n/translations_de.properties
+++ b/src/main/resources/vaadin-i18n/translations_de.properties
@@ -1,3 +1,33 @@
+domain.clubdesk.boundary.ClubDeskImportView.fieldName.address=Adresse
+domain.clubdesk.boundary.ClubDeskImportView.fieldName.addressAddition=Adress-Zusatz
+domain.clubdesk.boundary.ClubDeskImportView.fieldName.birthdate=Geburtsdatum
+domain.clubdesk.boundary.ClubDeskImportView.fieldName.city=Ort
+domain.clubdesk.boundary.ClubDeskImportView.fieldName.country=Land
+domain.clubdesk.boundary.ClubDeskImportView.fieldName.email=E-Mail
+domain.clubdesk.boundary.ClubDeskImportView.fieldName.emailAlternative=E-Mail Alternativ
+domain.clubdesk.boundary.ClubDeskImportView.fieldName.firstname=Vorname
+domain.clubdesk.boundary.ClubDeskImportView.fieldName.jug=Java User Group
+domain.clubdesk.boundary.ClubDeskImportView.fieldName.lastname=Nachname
+domain.clubdesk.boundary.ClubDeskImportView.fieldName.linkedin=LinkedIn
+domain.clubdesk.boundary.ClubDeskImportView.fieldName.mastodon=Mastodon
+domain.clubdesk.boundary.ClubDeskImportView.fieldName.matrix=Matrix
+domain.clubdesk.boundary.ClubDeskImportView.fieldName.sepaAccountHolder=Kontoinhaber
+domain.clubdesk.boundary.ClubDeskImportView.fieldName.sepaBic=BIC
+domain.clubdesk.boundary.ClubDeskImportView.fieldName.sepaEnabled=SEPA-Lastschrift erlauben
+domain.clubdesk.boundary.ClubDeskImportView.fieldName.sepaIban=IBAN
+domain.clubdesk.boundary.ClubDeskImportView.fieldName.sepaLastDebitDate=Letzter Lastschrifteinzug
+domain.clubdesk.boundary.ClubDeskImportView.fieldName.sepaMandateDate=Mandat Unterschriftsdatum
+domain.clubdesk.boundary.ClubDeskImportView.fieldName.sepaMandateReference=Mandatsreferenz
+domain.clubdesk.boundary.ClubDeskImportView.fieldName.sepaType=Lastschriftart
+domain.clubdesk.boundary.ClubDeskImportView.fieldName.zipCode=PLZ
+domain.clubdesk.boundary.ClubDeskImportView.saveButton=Daten speichern
+domain.clubdesk.boundary.ClubDeskImportView.step1=Schritt 1: Datei hochladen
+domain.clubdesk.boundary.ClubDeskImportView.step2=Schritt 2: Vorschau
+domain.clubdesk.boundary.ClubDeskImportView.step3=Schritt 3: Speichern
+domain.clubdesk.boundary.ClubDeskImportView.title=ClubDesk Import
+domain.clubdesk.boundary.ClubDeskImportView.uploadButton=CSV-Datei hochladen
+domain.clubdesk.boundary.ClubDeskImportView.uploadDrop=Ziehe eine CSV-Datei hierher oder klicke, um eine auszuwählen.
+domain.clubdesk.boundary.ClubDeskImportView.uploadIncorrectFileType=Ungültiger Dateityp. Bitte lade eine CSV-Datei hoch.
 service.ConfirmationService.email.message=Hallo!\n\nUm dich in deinem Konto anzumelden, klicke bitte auf den folgenden Link:\n\n{0}\n\nDieser Link ist gültig für {1}.\nFalls du diese E-Mail nicht angefordert hast, ignoriere sie bitte.
 service.ConfirmationService.email.subject=Bitte bestätige deine E-Mail-Adresse
 service.ConfirmationService.timeout={timeout, plural, one{einer Minute} other{{timeout} Minuten}}
@@ -10,7 +40,7 @@ web.layout.NavigationBar.themeToggle.tooltip=Dark Mode umschalten
 web.layout.PageFooter.dukeops=DukeOps · Version {0} · Lizenziert unter der AGPLv3 · Copyright © {1} iJUG e. V.
 web.view.ConfirmationView.error.message=Der Bestätigungslink ist ungültig oder abgelaufen.  \nBitte fordere auf der [Anmeldeseite](/login) einen neuen an.
 web.view.ConfirmationView.error.title=Bestätigung fehlgeschlagen
-web.view.ConfirmationView.success.message=Deine E-Mail wurde erfolgreich bestätigt.  \nDu wirst {timeout, plural, =0{jetzt} one{in einer Sekunde} other{in {timeout} Sekunden}} zum [Dashboard](/dashboard) weitergeleitet.
+web.view.ConfirmationView.success.message=Deine E-Mail wurde erfolgreich bestätigt.  \nDu wirst {timeout, plural, =0{jetzt} one{in einer Sekunde} other{in {timeout} Sekunden}} zum [Dashboard](/) weitergeleitet.
 web.view.ConfirmationView.success.title=Bestätigung erfolgreich
 web.view.DashboardView.title=Dashboard
 web.view.LoginView.confirm.description=Wenn ein Konto mit der E-Mail [{0}](mailto:{0}) existiert, wurde ein Login-Link gesendet.   \nDer Link ist {1} lang gültig. Wenn du die E-Mail nicht siehst, überprüfe bitte deinen Spam-Ordner.
