--- a/src/main/resources/vaadin-i18n/translations_de.properties
+++ b/src/main/resources/vaadin-i18n/translations_de.properties
@@ -24,6 +24,8 @@ domain.clubdesk.boundary.ClubDeskImportView.saveButton=Daten speichern
 domain.clubdesk.boundary.ClubDeskImportView.step1=Schritt 1: Datei hochladen
 domain.clubdesk.boundary.ClubDeskImportView.step2=Schritt 2: Vorschau
 domain.clubdesk.boundary.ClubDeskImportView.step3=Schritt 3: Speichern
+domain.clubdesk.boundary.ClubDeskImportView.successDialog.text=Es wurden {0} Datensätze importiert.
+domain.clubdesk.boundary.ClubDeskImportView.successDialog.title=Import abgeschlossen
 domain.clubdesk.boundary.ClubDeskImportView.title=ClubDesk Import
 domain.clubdesk.boundary.ClubDeskImportView.uploadButton=CSV-Datei hochladen
 domain.clubdesk.boundary.ClubDeskImportView.uploadDrop=Ziehe eine CSV-Datei hierher oder klicke, um eine auszuwählen.
