feat(clubdesk): allow user to modify address data #3
Signed-off-by: Marcus Fihlon <marcus@fihlon.swiss>

--- a/src/main/resources/vaadin-i18n/translations_de.properties
+++ b/src/main/resources/vaadin-i18n/translations_de.properties
@@ -1,3 +1,47 @@
+domain.clubdesk.boundary.ClubDeskEditView.description=Hier kannst du deine Vereins-Stammdaten anpassen.
+domain.clubdesk.boundary.ClubDeskEditView.error.address=Die Adresse darf nicht leer sein.
+domain.clubdesk.boundary.ClubDeskEditView.error.city=Der Ort darf nicht leer sein.
+domain.clubdesk.boundary.ClubDeskEditView.error.country=Das Land darf nicht leer sein.
+domain.clubdesk.boundary.ClubDeskEditView.error.email=Die E-Mail-Adresse ist ungültig.
+domain.clubdesk.boundary.ClubDeskEditView.error.emailAlternative=Die alternative E-Mail-Adresse ist ungültig.
+domain.clubdesk.boundary.ClubDeskEditView.error.firstname=Der Vorname darf nicht leer sein.
+domain.clubdesk.boundary.ClubDeskEditView.error.javaUserGroup=Die Java User Group darf nicht leer sein.
+domain.clubdesk.boundary.ClubDeskEditView.error.lastname=Der Nachname darf nicht leer sein.
+domain.clubdesk.boundary.ClubDeskEditView.error.sepaAccountHolder=Der Kontoinhaber darf nicht leer sein, wenn SEPA-Lastschrift erlaubt ist.
+domain.clubdesk.boundary.ClubDeskEditView.error.sepaBic=Die BIC ist ungültig.
+domain.clubdesk.boundary.ClubDeskEditView.error.sepaIban=Die IBAN ist ungültig.
+domain.clubdesk.boundary.ClubDeskEditView.error.zipCode=Die PLZ darf nicht leer sein.
+domain.clubdesk.boundary.ClubDeskEditView.errorDialog.button=OK
+domain.clubdesk.boundary.ClubDeskEditView.errorDialog.textNoClubDeskData=Es konnten keine Daten von ClubDesk geladen werden. Bitte wende dich an das iJUG Office.
+domain.clubdesk.boundary.ClubDeskEditView.errorDialog.title=Fehler
+domain.clubdesk.boundary.ClubDeskEditView.info.sepa.allow=Ich ermächtige den Verein iJUG e. V., Zahlungen von meinem Konto mittels SEPA-Lastschrift einzuziehen. Zugleich weise ich mein Kreditinstitut an, die vom Verein iJUG e. V. auf mein Konto gezogenen Lastschriften einzulösen.
+domain.clubdesk.boundary.ClubDeskEditView.info.sepa.cancel=Hinweis: Ich kann innerhalb von acht Wochen, beginnend mit dem Belastungsdatum, die Erstattung des belasteten Betrages verlangen. Es gelten dabei die mit meinem Kreditinstitut vereinbarten Bedingungen.
+domain.clubdesk.boundary.ClubDeskEditView.label.address=Straße und Hausnummer
+domain.clubdesk.boundary.ClubDeskEditView.label.addressAddition=Adresszusatz
+domain.clubdesk.boundary.ClubDeskEditView.label.city=Ort
+domain.clubdesk.boundary.ClubDeskEditView.label.country=Land
+domain.clubdesk.boundary.ClubDeskEditView.label.email=E-Mail
+domain.clubdesk.boundary.ClubDeskEditView.label.emailAlternative=E-Mail Alternativ
+domain.clubdesk.boundary.ClubDeskEditView.label.firstname=Vorname
+domain.clubdesk.boundary.ClubDeskEditView.label.javaUserGroup=Java User Group
+domain.clubdesk.boundary.ClubDeskEditView.label.lastname=Nachname
+domain.clubdesk.boundary.ClubDeskEditView.label.linkedin=LinkedIn
+domain.clubdesk.boundary.ClubDeskEditView.label.mastodon=Mastodon
+domain.clubdesk.boundary.ClubDeskEditView.label.matrix=Matrix
+domain.clubdesk.boundary.ClubDeskEditView.label.newsletter.off=Ich informiere mich über die Webseite und möchte keinen Newsletter erhalten
+domain.clubdesk.boundary.ClubDeskEditView.label.newsletter.on=Ich möchte regelmäßig (ca. 1x im Monat) per E-Mail über Neuigkeiten informiert werden
+domain.clubdesk.boundary.ClubDeskEditView.label.newsletter=Vereinsinformationen
+domain.clubdesk.boundary.ClubDeskEditView.label.sepaAccountHolder=Kontoinhaber
+domain.clubdesk.boundary.ClubDeskEditView.label.sepaBic=BIC
+domain.clubdesk.boundary.ClubDeskEditView.label.sepaEnabled=SEPA-Lastschrift erlaubt
+domain.clubdesk.boundary.ClubDeskEditView.label.sepaIban=IBAN
+domain.clubdesk.boundary.ClubDeskEditView.label.zipCode=PLZ
+domain.clubdesk.boundary.ClubDeskEditView.saveButton=Änderungen übermitteln
+domain.clubdesk.boundary.ClubDeskEditView.select.emptyCaption=Bitte auswählen
+domain.clubdesk.boundary.ClubDeskEditView.successDialog.button=OK
+domain.clubdesk.boundary.ClubDeskEditView.successDialog.text=Deine Änderungen wurden erfolgreich gespeichert und an das iJUG Office übermittelt.
+domain.clubdesk.boundary.ClubDeskEditView.successDialog.title=Änderungen gespeichert
+domain.clubdesk.boundary.ClubDeskEditView.title=Stammdaten aktualisieren
 domain.clubdesk.boundary.ClubDeskImportView.fieldName.address=Adresse
 domain.clubdesk.boundary.ClubDeskImportView.fieldName.addressAddition=Adress-Zusatz
 domain.clubdesk.boundary.ClubDeskImportView.fieldName.birthdate=Geburtsdatum
@@ -31,6 +75,7 @@ domain.clubdesk.boundary.ClubDeskImportView.title=ClubDesk Import
 domain.clubdesk.boundary.ClubDeskImportView.uploadButton=CSV-Datei hochladen
 domain.clubdesk.boundary.ClubDeskImportView.uploadDrop=Ziehe eine CSV-Datei hierher oder klicke, um eine auszuwählen.
 domain.clubdesk.boundary.ClubDeskImportView.uploadIncorrectFileType=Ungültiger Dateityp. Bitte lade eine CSV-Datei hoch.
+domain.clubdesk.control.ClubDeskService.email.office.subject=[DukeOps] Neue Stammdaten für {0} {1}
 service.ConfirmationService.email.message=Hallo!\n\nUm dich in deinem Konto anzumelden, klicke bitte auf den folgenden Link:\n\n{0}\n\nDieser Link ist gültig für {1}.\nFalls du diese E-Mail nicht angefordert hast, ignoriere sie bitte.
 service.ConfirmationService.email.subject=Bitte bestätige deine E-Mail-Adresse
 service.ConfirmationService.timeout={timeout, plural, one{einer Minute} other{{timeout} Minuten}}
