feat(notification): inform user about profile changes via email
Send an additional notification email to the affected user whenever
their master data is updated.

The email serves as a security notice and advises the user to contact
the iJUG Office if the change was not initiated by them.

Signed-off-by: Marcus Fihlon <marcus@fihlon.swiss>

--- a/src/main/resources/vaadin-i18n/translations_de.properties
+++ b/src/main/resources/vaadin-i18n/translations_de.properties
@@ -75,6 +75,11 @@ domain.clubdesk.boundary.ClubDeskImportView.title=ClubDesk Import
 domain.clubdesk.boundary.ClubDeskImportView.uploadButton=CSV-Datei hochladen
 domain.clubdesk.boundary.ClubDeskImportView.uploadDrop=Ziehe eine CSV-Datei hierher oder klicke, um eine auszuwählen.
 domain.clubdesk.boundary.ClubDeskImportView.uploadIncorrectFileType=Ungültiger Dateityp. Bitte lade eine CSV-Datei hoch.
+domain.clubdesk.control.ClubDeskService.diff.empty=leer
+domain.clubdesk.control.ClubDeskService.diff.no=nein
+domain.clubdesk.control.ClubDeskService.diff.yes=ja
+domain.clubdesk.control.ClubDeskService.email.member.body=Hallo {0} {1},\n\ndeine Stammdaten im iJUG Self-Service Portal (DukeOps) wurden soeben geändert:\n\n{2}\n\nDiese E-Mail dient zu deiner Information. Wenn du die Änderung selbst vorgenommen hast, ist nichts weiter zu tun. Falls du diese Änderung nicht selbst durchgeführt hast oder dir etwas ungewöhnlich vorkommt, melde dich bitte umgehend bei uns unter: office@ijug.eu\n\nAus Sicherheitsgründen versenden wir diese Benachrichtigung bei jeder Änderung deiner Stammdaten.\n\nViele Grüße\nDein iJUG Office
+domain.clubdesk.control.ClubDeskService.email.member.subject=[DukeOps] Deine Stammdaten wurden geändert
 domain.clubdesk.control.ClubDeskService.email.office.subject=[DukeOps] Neue Stammdaten für {0} {1}
 service.ConfirmationService.email.message=Hallo!\n\nUm dich in deinem Konto anzumelden, klicke bitte auf den folgenden Link:\n\n{0}\n\nDieser Link ist gültig für {1}.\nFalls du diese E-Mail nicht angefordert hast, ignoriere sie bitte.
 service.ConfirmationService.email.subject=Bitte bestätige deine E-Mail-Adresse
