feat(sepa): generate deterministic mandate reference
Generate a SEPA mandate reference when SEPA is enabled for a
ClubDesk record.

The reference is derived deterministically from the record UUID
using SHA-256 and Base32 encoding, prefixed with "IJUG-" and
truncated to 12 characters to remain human-readable and SEPA-
compliant.

The mandate reference is generated once and persisted unchanged.

Signed-off-by: Marcus Fihlon <marcus@fihlon.swiss>

--- a/src/main/resources/vaadin-i18n/translations_de.properties
+++ b/src/main/resources/vaadin-i18n/translations_de.properties
@@ -35,6 +35,7 @@ domain.clubdesk.boundary.ClubDeskEditView.label.sepaAccountHolder=Kontoinhaber
 domain.clubdesk.boundary.ClubDeskEditView.label.sepaBic=BIC
 domain.clubdesk.boundary.ClubDeskEditView.label.sepaEnabled=SEPA-Lastschrift erlaubt
 domain.clubdesk.boundary.ClubDeskEditView.label.sepaIban=IBAN
+domain.clubdesk.boundary.ClubDeskEditView.label.sepaMandateReference=Mandatsreferenz
 domain.clubdesk.boundary.ClubDeskEditView.label.zipCode=PLZ
 domain.clubdesk.boundary.ClubDeskEditView.saveButton=Änderungen übermitteln
 domain.clubdesk.boundary.ClubDeskEditView.select.emptyCaption=Bitte auswählen
@@ -59,10 +60,7 @@ domain.clubdesk.boundary.ClubDeskImportView.fieldName.sepaAccountHolder=Kontoinh
 domain.clubdesk.boundary.ClubDeskImportView.fieldName.sepaBic=BIC
 domain.clubdesk.boundary.ClubDeskImportView.fieldName.sepaEnabled=SEPA-Lastschrift erlauben
 domain.clubdesk.boundary.ClubDeskImportView.fieldName.sepaIban=IBAN
-domain.clubdesk.boundary.ClubDeskImportView.fieldName.sepaLastDebitDate=Letzter Lastschrifteinzug
-domain.clubdesk.boundary.ClubDeskImportView.fieldName.sepaMandateDate=Mandat Unterschriftsdatum
 domain.clubdesk.boundary.ClubDeskImportView.fieldName.sepaMandateReference=Mandatsreferenz
-domain.clubdesk.boundary.ClubDeskImportView.fieldName.sepaType=Lastschriftart
 domain.clubdesk.boundary.ClubDeskImportView.fieldName.zipCode=PLZ
 domain.clubdesk.boundary.ClubDeskImportView.saveButton=Daten speichern
 domain.clubdesk.boundary.ClubDeskImportView.step1=Schritt 1: Datei hochladen
