fix(validation): improve clarity of error messages
Make validation error messages more explicit and easier to understand
to help users identify and correct input issues.

Signed-off-by: Marcus Fihlon <marcus@fihlon.swiss>

--- a/src/main/resources/vaadin-i18n/translations_de.properties
+++ b/src/main/resources/vaadin-i18n/translations_de.properties
@@ -7,9 +7,9 @@ domain.clubdesk.boundary.ClubDeskEditView.error.emailAlternative=Die alternative
 domain.clubdesk.boundary.ClubDeskEditView.error.firstname=Der Vorname darf nicht leer sein.
 domain.clubdesk.boundary.ClubDeskEditView.error.javaUserGroup=Die Java User Group darf nicht leer sein.
 domain.clubdesk.boundary.ClubDeskEditView.error.lastname=Der Nachname darf nicht leer sein.
-domain.clubdesk.boundary.ClubDeskEditView.error.sepaAccountHolder=Der Kontoinhaber darf nicht leer sein, wenn SEPA-Lastschrift erlaubt ist.
-domain.clubdesk.boundary.ClubDeskEditView.error.sepaBic=Die BIC ist ungültig.
-domain.clubdesk.boundary.ClubDeskEditView.error.sepaIban=Die IBAN ist ungültig.
+domain.clubdesk.boundary.ClubDeskEditView.error.sepaAccountHolder=Der Kontoinhaber darf nicht leer sein.
+domain.clubdesk.boundary.ClubDeskEditView.error.sepaBic=Die BIC darf nicht leer sein.
+domain.clubdesk.boundary.ClubDeskEditView.error.sepaIban=Die IBAN darf nicht leer sein.
 domain.clubdesk.boundary.ClubDeskEditView.error.zipCode=Die PLZ darf nicht leer sein.
 domain.clubdesk.boundary.ClubDeskEditView.errorDialog.button=OK
 domain.clubdesk.boundary.ClubDeskEditView.errorDialog.textNoClubDeskData=Es konnten keine Daten von ClubDesk geladen werden. Bitte wende dich an das iJUG Office.
