refactor(security): delegate logout handling to Spring Security
Remove custom logout view and service logic and rely on the
standard Spring Security `/logout` endpoint instead. This
simplifies the logout flow, avoids Vaadin session lifecycle
issues, and ensures consistent session and security context
cleanup.

Signed-off-by: Marcus Fihlon <marcus@fihlon.swiss>

--- a/src/main/resources/vaadin-i18n/translations_de.properties
+++ b/src/main/resources/vaadin-i18n/translations_de.properties
@@ -87,6 +87,7 @@ test.placeholder=Dieses ist ein Platzhalter: {0}
 test.simpleMessage=Testmeldung auf Deutsch
 test.twoPlaceholders=Dies sind zwei Platzhalter: {0} und {1}
 web.layout.NavigationBar.imprintLink.text=Impressum
+web.layout.NavigationBar.logoutLink.text=Abmelden
 web.layout.NavigationBar.themeToggle.tooltip=Dark Mode umschalten
 web.layout.PageFooter.dukeops=DukeOps · Version {0} · Lizenziert unter der AGPLv3 · Copyright © {1} iJUG e. V.
 web.view.ConfirmationView.error.message=Der Bestätigungslink ist ungültig oder abgelaufen.  \nBitte fordere auf der [Anmeldeseite](/login) einen neuen an.
@@ -101,4 +102,3 @@ web.view.LoginView.login.email.placeholder=Gebe deine E-Mail-Adresse ein
 web.view.LoginView.login.email.validationError=Dies ist keine gültige E-Mail-Adresse.
 web.view.LoginView.login.title=Bitte melde dich an
 web.view.LoginView.title=Anmelden
-web.view.LogoutView.title=Abmelden
