feat: add ClubDesk import to dashboard (only for admins)
Signed-off-by: Marcus Fihlon <marcus@fihlon.swiss>

--- a/src/main/resources/vaadin-i18n/translations_de.properties
+++ b/src/main/resources/vaadin-i18n/translations_de.properties
@@ -43,6 +43,7 @@ domain.clubdesk.boundary.ClubDeskEditView.successDialog.button=OK
 domain.clubdesk.boundary.ClubDeskEditView.successDialog.text=Deine Änderungen wurden erfolgreich gespeichert und an das iJUG Office übermittelt.
 domain.clubdesk.boundary.ClubDeskEditView.successDialog.title=Änderungen gespeichert
 domain.clubdesk.boundary.ClubDeskEditView.title=Stammdaten aktualisieren
+domain.clubdesk.boundary.ClubDeskImportView.description=Hier kannst du die Stammdaten aus ClubDesk importieren.
 domain.clubdesk.boundary.ClubDeskImportView.fieldName.address=Adresse
 domain.clubdesk.boundary.ClubDeskImportView.fieldName.addressAddition=Adress-Zusatz
 domain.clubdesk.boundary.ClubDeskImportView.fieldName.birthdate=Geburtsdatum
