feat(clubdesk): validate and normalize IBAN/BIC input #10
Add iban4j-based validation for IBAN and BIC fields.
Restrict input to alphanumeric characters, enforce max lengths,
and normalize values to uppercase on blur and when building the DTO.

Signed-off-by: Marcus Fihlon <marcus@fihlon.swiss>

--- a/src/main/resources/vaadin-i18n/translations_de.properties
+++ b/src/main/resources/vaadin-i18n/translations_de.properties
@@ -8,8 +8,10 @@ domain.clubdesk.boundary.ClubDeskEditView.error.firstname=Der Vorname darf nicht
 domain.clubdesk.boundary.ClubDeskEditView.error.javaUserGroup=Die Java User Group darf nicht leer sein.
 domain.clubdesk.boundary.ClubDeskEditView.error.lastname=Der Nachname darf nicht leer sein.
 domain.clubdesk.boundary.ClubDeskEditView.error.sepaAccountHolder=Der Kontoinhaber darf nicht leer sein.
-domain.clubdesk.boundary.ClubDeskEditView.error.sepaBic=Die BIC darf nicht leer sein.
-domain.clubdesk.boundary.ClubDeskEditView.error.sepaIban=Die IBAN darf nicht leer sein.
+domain.clubdesk.boundary.ClubDeskEditView.error.sepaBic.empty=Die BIC darf nicht leer sein.
+domain.clubdesk.boundary.ClubDeskEditView.error.sepaBic.invalid=Die BIC ist ungültig.
+domain.clubdesk.boundary.ClubDeskEditView.error.sepaIban.empty=Die IBAN darf nicht leer sein.
+domain.clubdesk.boundary.ClubDeskEditView.error.sepaIban.invalid=Die IBAN ist ungültig.
 domain.clubdesk.boundary.ClubDeskEditView.error.zipCode=Die PLZ darf nicht leer sein.
 domain.clubdesk.boundary.ClubDeskEditView.errorDialog.button=OK
 domain.clubdesk.boundary.ClubDeskEditView.errorDialog.textNoClubDeskData=Es konnten keine Daten von ClubDesk geladen werden. Bitte wende dich an das iJUG Office.
